log/build_2021-12-08_20-56-19/py_chester_pkg/stderr.log
  File "/home/ubuntu/ros2_ws/install/py_chester_pkg/lib/python3.8/site-packages/py_chester_pkg/light_controller.py", line 20
    )
    ^
SyntaxError: unmatched ')'

